# FlecsTests

./: CMakeLists.txt  Makefile
html/: main.data  main.js  main.wasm  main.wasm.map
src/: main.c  tigr.c
